@@ -1,0 +1,7 @@
+# XXX This class should be removed in the next Release (3.2)
+# Only used for problem-free migration to the new Portlet Assignment.
+from plone.app.portlets.portlets import base
+
+
+class Assignment(base.Assignment):
+    pass
