@@ -1,0 +1,16 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="ftw.dashboard.portlets.favourites">
+
+    <!-- 1 -> 3001 -->
+    <genericsetup:upgradeStep
+        title="Replace old favourite portlets"
+        description=""
+        source="1"
+        destination="3001"
+        handler="ftw.dashboard.portlets.favourites.upgrades.to3001.ReplaceOldFavouritePortlets"
+        profile="ftw.dashboard.portlets.favourites:default"
+        />
+
+</configure>
