@@ -6,6 +6,9 @@ Changelog
 3.1 (unreleased)
 ----------------
 
+- Added Migration Upgradestep for old favourite portlets to the new implementation(3.0).
+  [phgross]
+
 - Fixed UnicodeEncodeError in AddFavourite, wich happens when
   adding a Dexterity Item with a non-ascii title to the Favourites.
   [phgross]
